app/globals.css
@import "tailwindcss";

:root {
  --background: #f5f6f8;
  --foreground: #FFFFFF;
  --black-text: #0F172A;
  --gray-text: #64748B;
  --blue-text: #0060E6;
}

@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-black: var(--black-text);
  --color-gray: var(--gray-text);;
  --color-blue: var(--blue-text);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@layer base {
  body {
    font-family: var(--font-geist-sans), ui-sans-serif, system-ui;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

